# Retail_Sales

./: LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
app/: main.py  requirements.txt  tempCodeRunnerFile.py
docs/: Makefile  conf.py  index.rst  make.bat
models/predictive/: lgbm_pipe.joblib
notebooks/forecasting/: Bhutani_Saumya-14360820-forecasting_sarima.ipynb
notebooks/predictive/: Bhutani_Saumya-14360820-predictive_lgbm.ipynb
src/data/: datapreprocess.py
src/visualization/: visualize.py
