[tool.poetry]
name = "adv-mla-at2"
version = "0.1.0"
description = ""
authors = ["bhutanisaumya <saumya.bhutani@student.uts.edu.au>"]
readme = "README.md"
packages = [{include = "adv_mla_at2"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "2.0.1"
jupyterlab = "3.6.3"
scikit-learn = "1.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
